--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
+    "@types/react-datepicker": "^4.19.5",
     "@types/react-dom": "^18.0.0",
     "@types/styled-components": "5.1.25",
     "file-saver": "^2.0.5",
     "react": "^18.0.0",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
     "sheetjs-style": "0.15.8",
