--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
     "@types/react-datepicker": "^4.19.5",
     "@types/react-dom": "^18.0.0",
     "@types/styled-components": "5.1.25",
+    "axios": "^1.6.7",
+    "bootstrap": "^5.3.2",
+    "devextreme": "23.2",
+    "devextreme-react": "23.2",
     "file-saver": "^2.0.5",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.9.2",
     "react-datepicker": "^4.25.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.4",
     "sheetjs-style": "0.15.8",
     "styled-components": "5.3.5",
     "typescript": "^4.4.2",
